Recipes + Phantom Membrane Block

--- a/src/main/resources/assets/compressed_items/lang/en_us.json
+++ b/src/main/resources/assets/compressed_items/lang/en_us.json
@@ -22,6 +22,7 @@
 	"block.compressed_items.sugar_cane_block": "Sugar Cane Block",
 	"block.compressed_items.totem_block": "Totem Block",
 	"block.compressed_items.wallpaper_block": "Wallpaper Block",
+	"block.compressed_items.phantom_membrane_block": "Phantom Membrane Block",
 	"block.compressed_items.flint_block": "Block of Flint",
 	"block.compressed_items.branches_block": "Branches Block",
 	"block.compressed_items.apple_block": "Apple Block",
