--- a/src/main/resources/assets/compressed_items/lang/en_us.json
+++ b/src/main/resources/assets/compressed_items/lang/en_us.json
@@ -29,6 +29,7 @@
 	"block.compressed_items.golden_apple_block": "Golden Apple Block",
 	"block.compressed_items.ender_pearl_block": "Ender Pearl Block",
 	"block.compressed_items.blaze_rod_block": "Blaze Rod Block",
+	"block.compressed_items.bamboo_block": "Bamboo Block",
 	
 	"___comment": "Items",
 	"item.compressed_items.iron_nugget_bag": "Iron Nugget Bag",
